--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -30,7 +31,9 @@
 
         <h2>CSS</h2>
         <ul>
-          <li>Enter CSS notes here</li>
+          <li>A margin indicates how much space we want around of an element</li>
+          <li> A padding indicates how much space we want around the content of an element </li>
+          <li>There are 3 ways to add CSS-inline, internal, and external. </li>
         </ul>
         
       </section>
